<resources>
	<string name="hello">Hello World, APLocalizationActivity!</string>
	<string name="app_name">WiFi Compass</string>
	<string name="app_package">at.fhstp.wificompass</string>
	<string name="about">About</string>
	<string name="quit">Quit</string>
	<string name="test1">Test 1</string>
	<string name="test2">Test 2</string>
	<string name="project">Project</string>
	<string name="wifi_scan">Quick scan</string>
	<string name="newProjectText">Create a new project</string>
	<string name="loadProject">Load project</string>
	<string name="main_info_text">Welcome to WiFi Compass! \nCreate a project or use
		Quick Scan.
	</string>
	<string name="aboutText">
	&lt;h1&gt;WiFi Compass&lt;/h1&gt;
&lt;h2&gt;About&lt;/h2&gt;
&lt;p&gt;WiFi Compass was developed by Paul Woelfel and Thomas Konrad as a part
of their master thesis at University of Applied Sciences St. Poelten,
Austria. &lt;br /&gt;
It is published as open source software as
&lt;a href="http://code.google.com/p/wificompass"&gt;project WiFicompass on google code&lt;/a&gt;.
&lt;/p&gt;
&lt;p&gt;Information about the License could be found at the &lt;a href="http://code.google.com/p/wificompass/"&gt;Project Site&lt;/a&gt; and about the contributions from other projects at the &lt;a href="http://code.google.com/p/wificompass/wiki/Contributions"&gt;Contributions Wiki page&lt;/a&gt;.&lt;/p&gt;
&lt;h2&gt;License&lt;/h2&gt;
&lt;p&gt;WiFi Compass is licensed under &lt;a href="http://www.gnu.org/licenses/gpl-3.0.html"&gt;GPLv3&lt;/a&gt;, because parts of it are based on &lt;a href="https://github.com/COMSYS/FootPath"&gt;Footpath&lt;/a&gt;.&lt;/p&gt;

&lt;h4&gt;GPLv3&lt;/h4&gt;


&lt;p&gt;This program is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option) any later version.&lt;br /&gt;
&lt;br /&gt;
This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.&lt;br /&gt;
&lt;br /&gt;
You should have received a copy of the GNU General Public License along with this program.  If not, see &lt;a href="http://www.gnu.org/licenses/"&gt;http://www.gnu.org/licenses/&lt;/a&gt;.&lt;/p&gt;


&lt;h4&gt;&lt;a href="http://ormlite.com/"&gt;ORMLite&lt;/a&gt;&lt;/h4&gt;
&lt;p&gt;Permission to use, copy, modify, and/or distribute this software for any purpose with or without fee is hereby granted, provided that this permission notice appear in all copies.&lt;br /&gt;
&lt;br /&gt;
THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.&lt;/p&gt;

&lt;h4&gt;&lt;a href="https://github.com/COMSYS/FootPath"&gt;Footpath&lt;/a&gt;&lt;/h4&gt;

&lt;p&gt;Licensed under &lt;a href="http://www.gnu.org/licenses/gpl-3.0.html"&gt;GPLv3&lt;/a&gt;.&lt;/p

&lt;h4&gt;&lt;a href="http://findicons.com/icon/184603/arrow_up"&gt;Arrow icon to set the scale of map&lt;/a&gt;&lt;/h4&gt;
&lt;p&gt;&lt;a href="http://creativecommons.org/licenses/by/3.0/"&gt;Creative Commons Attribution (by)&lt;/a&gt; &lt;br /&gt;
Icons by &lt;a href="http://zen-nikki.deviantart.com/"&gt;Dang Nguyen&lt;/a&gt; &lt;/p&gt;

&lt;h4&gt;&lt;a href="http://p.yusukekamiyamane.com/"&gt;Fuge icons&lt;/a&gt;&lt;/h4&gt;
&lt;p&gt;&lt;a href="http://creativecommons.org/licenses/by/3.0/"&gt;Creative Commons Attribution 3.0 License&lt;/a&gt;
&lt;br /&gt;Icons by &lt;a href="http://p.yusukekamiyamane.com/"&gt;Yusuke Kamiyamane&lt;/a&gt;&lt;/p&gt;

&lt;h4&gt;&lt;a href="http://www.iconspedia.com/icon/gyro-compass-15061.html"&gt;Compass Icon&lt;/a&gt;&lt;/h4&gt;
&lt;p&gt;&lt;a href="http://creativecommons.org/licenses/by-nc-sa/3.0"&gt;CC Attribution Non-Commercial Share Alike&lt;/a&gt;&lt;br /&gt;
Icons by &lt;a href="http://wilkolak3dh.deviantart.com/"&gt;Marysia Tomaszewska&lt;/a&gt;&lt;/p&gt;

&lt;h4&gt;&lt;a href="http://mapicons.nicolasmollet.com/markers/restaurants-bars/wi-fi/"&gt;WiFi Icons&lt;/a&gt;&lt;/h4&gt;
&lt;p&gt;&lt;a href="http://creativecommons.org/licenses/by-sa/3.0/"&gt;Creative Commons Attribution-Share Alike 3.0 Unported License&lt;/a&gt;&lt;br /&gt;
Icons by &lt;a href="http://mapicons.nicolasmollet.com/"&gt;Maps Icons Collection (Nicolas Mollet)&lt;/a&gt;&lt;/p&gt;

	</string>
	<string name="untitled">Untitled</string>
	<string name="enableingWiFiSucceed">WiFi successfully enabled</string>
	<string name="database_failure">There was an problem with the database!</string>
	<string name="database_create_failed">failed to create the database! This application
		can\'t run without a SQLite dabatase!
	</string>
	<string name="not_implemented">function currently not implemented!</string>
	<string name="button_ok">OK</string>
	<string name="button_cancel">Cancel</string>
	<string name="button_yes">Yes</string>
	<string name="button_no">No</string>
	<string name="unknown">unknown</string>
	<string name="empty" />
	<string name="blank"></string>
	<string name="select_all">Select all</string>
	<string name="deselect_all">Deselect all</string>
	<string name="not_a_number">The value you entered (%1$s) is not a valid number!
	</string>
	<string name="general_all">All</string>
	<string name="about_app_revision">Revision</string>
	<string name="about_app_commit_date">Last commit</string>
	<string name="about_app_repository_url">Repository URL</string>
	<string-array name="wifi_states">
		<item>WiFi is being disabled</item>
		<item>WiFi disabled</item>
		<item>WiFi is being enabled</item>
		<item>WiFi is enabled</item>
		<item>WiFi state is unknown</item>
	</string-array>
	<string name="main_wifi_scan">WiFi Scan</string>
	<string name="main_export_db_label">Backup &amp; Restore</string>
	<string name="main_project_text">Projects</string>
	<string name="main_settings_option">Settings</string>
	<string name="main_loglevel_option">Log Level</string>
	<string name="main_menu_calibrate">Calibrate Sensors</string>
	<string name="main_utils">Utils</string>
	<string name="main_quickscan_button">Quick Scan!</string>
	<string name="quickscan_project_name">Quick Scan %s</string>
	<string name="quickscan_project_site_name">Quick Scan Site %s</string>
	<string name="main_quickscan_failed">Failed to start the Quick Scan: \n%s</string>
	<string name="main_start_auto_calibration_title">Sensor Auto Calibration</string>
	<string name="main_start_auto_calibration_message">This Application uses the Accelerometer to track
		your movement. To improve step detection, this should be calibrated to
		you and your device.\nIf you want to calibrate this later user Menu ->
		Utils -> Sensor Calibration.\n\nDo you want to start Sensor
		Calibration?
	</string>
	<string name="preferences_activity">Preferences</string>
	<string name="preferences_loglevel_text">Log Level</string>
	<string-array name="preferences_loglevels">
		<item>VERBOSE</item>
		<item>DEBUG</item>
		<item>INFO</item>
		<item>WARN</item>
		<item>ERROR</item>
		<item>ASSERT</item>
	</string-array>
	<string name="sample_scan_start_button_text">Start Scan</string>
	<string name="sample_scan_stop_button_text">Stop WiFi Scan</string>
	<string name="sample_scan_scanning_text">Scanning…</string>
	<string name="sample_scan_start_scan_failed">Starting the Scan failed!</string>
	<string name="sample_scan_enableing_wifi">WiFi is currently disabled, trying to enable it.
	</string>
	<string name="sample_scan_enableing_wifi_failed">Could not enable WiFi!</string>
	<string name="sample_scan_text_start">To start a WiFi scan, press the start
		button!\nThese are the last scan results:
	</string>
	<string name="sample_scan_stopped">\nWiFi scan stopped.</string>
	<string name="sample_scan_wifi_capabilities">Capabilities</string>
	<string name="sample_scan_wifi_ssid">SSID</string>
	<string name="sample_scan_wifi_bssid">BSSID</string>
	<string name="sample_scan_wifi_rssi">RSSI</string>
	<string name="sample_scan_wifi_frequency">Frequency</string>
	<string name="sample_scan_scan_finished">\nWiFi scan finished!</string>
	<string name="sample_scan_wifi_state">WiFi state: </string>
	<string name="sample_scan_supplicant_state">WiFi supplicant state: </string>
	<string name="filebrowser_parent_dir">Parent directory</string>
	<string name="filebrowser_dir">Directory</string>
	<string name="filebrowser_error_save">Couldn\'t save the file!</string>
	<string name="filebrowser_save">Save here</string>
	<string name="filebrowser_saved">Saved!</string>
	<string name="filebrowser_dialog_filename_title">Enter file name!</string>
	<string name="filebrowser_dialog_filename_message">Enter the file name for the file to save!</string>
	<string name="filebrowser_dialog_directory_title">Create directory!</string>
	<string name="filebrowser_dialog_directory_message">Enter the name for the directory to save!</string>
	<string name="file_ending">wcdb</string>
	<string name="filebrowser_label">File browser</string>
	<string name="filebrowser_new_dir">New directory</string>
	<string name="project_title">Project title</string>
	<string name="project_path">Project path</string>
	<string name="project_description">Project description</string>
	<string name="project_path_default">.</string>
	<string name="project_new_location_button">add new survey site</string>
	<string name="project_site_reset_zoom">Reset zoom/rotation</string>
	<string name="project_site_menu_change_name">Change Title</string>
	<string name="project_site_menu_save">Save Project Site</string>
	<string name="project_site_snap_user">Snap User to Grid</string>
	<string name="project_site_menu_change_size">Change Map Size</string>
	<string name="project_site_dialog_size_middle_text">x</string>
	<string name="project_site_menu_set_background">Set Map Image</string>
	<string name="project_site_calculate_ap_positions">Calculate AP positions</string>
	<string name="project_site_set_scale_of_map">Set Map Scale</string>
	<string name="project_site_dialog_change_size_width">width</string>
	<string name="project_site_dialog_change_size_height">height</string>
	<string name="project_site_add_known_ap">Add known AP</string>
	<string name="project_site_menu_set_north">Set North</string>
	<string name="project_site_menu_delete">Delete Project Site</string>
	<string name="project_site_menu_settings">Settings</string>
	<string name="project_site_menu_view">Map Settings</string>
	<string name="project_site_menu_calculation">AP Calculation</string>
	<string name="project_site_menu_project_site">Project Site Settings</string>
	<string name="sensors_accelerometer_label">Accelerometer</string>
	<string name="sensors_accelerometer_text">no data</string>
	<string name="sensors_gyroscope_label">Gyroscope</string>
	<string name="sensors_gyroscope_text">no data</string>
	<string name="export_db_info_text">You can export the database, import or drop the
		database by pressing the button.
	</string>
	<string name="export_db_button_text">export projects to SD card</string>
	<string name="export_db_message_text">nothing to do…</string>
	<string name="calibrator_tv_peak">Peak: </string>
	<string name="calibrator_tv_filter">Filter: </string>
	<string name="calibrator_tv_step_timeout">Step Timeout: </string>
	<string name="calibrator_tv_step_size">Step Size (m)</string>
	<string name="calibrator_start_auto_calibration">Start Auto Calibration!</string>
	<string name="calibrator_stop_auto_calibration">Stop Auto Calibration!</string>
	<string name="calibrator_analyze_data">Analyze Data</string>
</resources>