<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" android:padding="10dp">

    <TextView
        android:id="@+id/export_db_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_db_info_text" android:layout_marginBottom="10dp" android:textColor="@color/globalForeground"/>

    <Button
        android:id="@+id/export_db_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_db_button_text" android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/export_db_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_db_message_text" android:layout_marginBottom="10dp" android:textColor="@color/globalForeground"/>

</LinearLayout>