<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/project_site_change_size_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="horizontal" >

    <EditText
        android:id="@+id/project_site_dialog_change_size_width"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:hint="@string/project_site_dialog_change_size_width"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/project_site_dialog_size_middle_text"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/project_site_dialog_change_size_height"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/project_site_dialog_change_size_height"
        android:inputType="number" />

</LinearLayout>