<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calibrator_LinearLayout01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:padding="3dp">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/calibrator_tvPeak"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/calibrator_tv_peak" android:layout_marginRight="5dp">
            </TextView>

            <SeekBar
                android:id="@+id/calibrator_sbPeak"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="40"
                android:progress="5" android:layout_weight="1">
            </SeekBar>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/calibrator_tvFilter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/calibrator_tv_filter" android:layout_marginRight="5dp">
            </TextView>

            <SeekBar
                android:id="@+id/calibrator_sbFilter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="75"
                android:progress="60" android:layout_weight="1">
            </SeekBar>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/calibrator_tvTimeout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/calibrator_tv_step_timeout" android:layout_marginRight="5dp">
            </TextView>

            <SeekBar
                android:id="@+id/calibrator_sbTimeout"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="600"
                android:progress="333" android:layout_weight="1">
            </SeekBar>
        </TableRow>

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/calibrator_tv_step_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/calibrator_tv_step_size" android:layout_marginRight="5dp">
            </TextView>

            <SeekBar
                android:id="@+id/calibrator_step_size"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:max="150"
                android:progress="70" android:layout_weight="1">
            </SeekBar>
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/calibrator_layout_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <ToggleButton
            android:id="@+id/calibrator_auto_calibrate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:text="@string/calibrator_start_auto_calibration"
            android:textOff="@string/calibrator_start_auto_calibration"
            android:textOn="@string/calibrator_stop_auto_calibration" />

        <Button
            android:id="@+id/calibrator_analyze_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/calibrator_analyze_data" />
    </LinearLayout>

    <SurfaceView
        android:id="@+id/calibrator_svHistory"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp" >
    </SurfaceView>

</LinearLayout>